--- a/style/globals.css
+++ b/style/globals.css
@@ -38,6 +38,7 @@ body {
   overflow-x: clip;
   background-color: var(--color-bg);
   color: var(--color-text);
+  font-family: acumin-wide-light, sans-serif;
   width: 100%;
   overflow-y: auto;
 }
